--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,6 @@
 buildscript {
     repositories {
         jcenter()
-        flatDir {
-            dirs 'libs'
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
@@ -17,6 +14,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
