--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'org.altbeacon:android-beacon-library:2+'
+    compile 'com.parse.bolts:bolts-android:1.2.0'
 }
