--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.greplr.bytes">
+    package="com.greplr.bytes" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,6 +13,7 @@
     <permission
         android:name="com.greplr.bytes.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.greplr.bytes.permission.C2D_MESSAGE" />
 
     <application
@@ -20,10 +21,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".FoodCourtActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,26 +35,26 @@
         <service
             android:name=".BeaconDetectionService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu"
-            android:parentActivityName=".FoodCourtActivity">
+            android:parentActivityName=".FoodCourtActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".FoodCourtActivity" />
         </activity>
         <activity
             android:name=".CartActivity"
-            android:label="@string/title_activity_cart"></activity>
+            android:label="@string/title_activity_cart" />
         <activity
             android:name=".ResultActivity"
-            android:label="@string/title_activity_result"></activity>
+            android:label="@string/title_activity_result" />
 
         <service android:name="com.parse.PushService" />
 
-        <receiver android:name="com.parse.ParseBroadcastReceiver">
+        <receiver android:name="com.parse.ParseBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
@@ -61,7 +62,7 @@
         </receiver>
         <receiver
             android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
@@ -70,8 +71,8 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="com.greplr.bytes.NotificationReceiver"
-            android:exported="false">
+            android:name=".NotificationReceiver"
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
                 <action android:name="com.parse.push.intent.DELETE" />
@@ -79,6 +80,10 @@
             </intent-filter>
         </receiver>
 
+        <activity
+            android:name=".BitcoinActivity"
+            android:label="@string/title_activity_bitcoin" >
+        </activity>
     </application>
 
 </manifest>
